--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@react-three/rapier": "^2.1.0",
     "framer-motion": "^12.23.12",
     "meshline": "^3.3.1",
+    "motion": "^12.23.12",
     "next": "15.4.5",
+    "ogl": "^1.0.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "three": "^0.167.1"
   },
   "devDependencies": {
