--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^9.3.0",
     "@react-three/rapier": "^2.1.0",
     "framer-motion": "^12.23.12",
+    "gsap": "^3.13.0",
     "meshline": "^3.3.1",
     "motion": "^12.23.12",
     "next": "15.4.5",
